--- a/services/public/package.json
+++ b/services/public/package.json
@@ -13,7 +13,8 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-jss": "^10.1.1",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
