--- a/services/api/package.json
+++ b/services/api/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --watch src node src/index.js"
+    "dev": "NODE_ENV=development nodemon --watch src node src/index.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie": "^0.4.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
