--- a/services/api/package.json
+++ b/services/api/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon --watch src node src/index.js"
+    "dev": "NODE_ENV=development nodemon --watch src node src/index.js",
+    "start": "node src/index.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
