--- a/services/api/package.json
+++ b/services/api/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "log-to-file": "^2.0.2",
     "moment": "^2.24.0",
     "mongodb": "^3.5.5",
     "redis": "^3.0.2",
