--- a/services/api/package.json
+++ b/services/api/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development nodemon --watch src node src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js > log/errors.log 2>&1"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
