--- a/services/public/package.json
+++ b/services/public/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^16.13.1",
     "react-jss": "^10.1.1",
     "react-router-dom": "^5.1.2",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
